--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.30.0",
     "formik": "^2.4.6",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "yuf": "^0.0.0"
+    "react-hot-toast": "^2.5.2",
+    "yuf": "^0.0.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "eslint": "^8",
