--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^3.30.0",
+    "axios": "^1.8.4",
     "formik": "^2.4.6",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
